name:                ghcjs-fetch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/ghcjs-fetch#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2017 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GHCJS.Fetch
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , ghcjs-base
                     , http-types
  default-language:    Haskell2010

test-suite ghcjs-fetch-test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       aeson
                     , base
                     , ghcjs-base
                     , ghcjs-fetch
                     , hspec
                     , hspec-core
                     , http-types
                     , QuickCheck
                     , text
                     , unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/ghcjs-fetch
